fetch CRUD apis

--- a/react-typescript-frontend/tsconfig.json
+++ b/react-typescript-frontend/tsconfig.json
@@ -23,5 +23,9 @@
   },
   "include": [
     "src"
-  ]
+  ],
+  "baseUrl": ".",
+    "paths": {
+      "react-toastify": ["node_modules/react-toastify"]
+    }
 }
